--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
 	      <configuration>
 	      <appName>fathomless-crag-27555</appName>
 	        <processTypes>
-	          <web>java $JAVA_OPTS -cp target/classes:target/dependency/* Main</web>
+	          <web>java -jar target/library-0.0.1-SNAPSHOT.jar</web>
 	        </processTypes>
 	      </configuration>
 	    </plugin>
@@ -53,8 +53,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.0</version>
                 <configuration>
-                    <source>11</source>
-                    <target>11</target>
+                     <source>1.8</source>
+        <target>1.8</target>
                 </configuration>
             </plugin>
 		</plugins>
