--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,8 @@
-## MULTIPART (MultipartProperties)
-# Enable multipart uploads
-spring.servlet.multipart.enabled=true
-# Threshold after which files are written to disk.
-spring.servlet.multipart.file-size-threshold=2KB
-# Max file size.
-spring.servlet.multipart.max-file-size=200MB
-# Max Request Size
-spring.servlet.multipart.max-request-size=215MB
+security.oauth2.client.client-authentication-scheme = form
+security.oauth2.client.authentication-scheme = header
+security.oauth2.client.grant-type = authorization_code
+security.oauth2.client.access-token-uri = https://login.salesforce.com/services/oauth2/token
+security.oauth2.client.user-authorization-uri = https://login.salesforce.com/services/oauth2/authorize
+security.oauth2.resource.user-info-uri = https://login.salesforce.com/services/oauth2/userinfo
 
-## File Storage Properties
-file.upload-dir="./public/uploads"
-## Site Configuration Properties, default value = "", production value = "https://gamestore-api.herokuapp.com"
-site.api-url="https://gamestore-api.herokuapp.com"
+#logging.level.org.springframework.security = DEBUG
